2006-03-01  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (vert-split-frame): call show-frame-indicator with screen
	(select-window): raise the window in its frame.

	* primitives.lisp (*internal-loop-hook*): new hook

	* stumpwm.lisp (stumpwm-internal-loop): run the *internal-loop-hook* hook

	* core.lisp (frame-raise-window): new argument focus. simply raise
	the frame's window if focus is NIL.
	(maximize-window): use floor instead of truncate.

	* user.lisp (horiz-split-frame): call show-frame-indicator
	(vert-split-frame): likewise
	(remove-split): likewise
	(focus-frame-sibling): likewise
	("fselect"): likewise
	(pull-window-by-number): give the old frame a new window if it's
	focused window is being pulled.
	(renumber): remove useless error message.

	* stumpwm.lisp (load-rc-file): use user-homedir-pathname
	(stumpwm-internal-loop): call unmap-all-frame-indicators

	* primitives.lisp (*timeout-frame-indicator-wait*): new defun
	(*timeout*): add doc string
	(reset-timeout-for-frame-indicator): new defun
	(font-height): likewise

	* core.lisp (process-new-window): use +normal-state+
	(split-frame-v): use frame-y for :y
	(unmap-frame-indicator): new defun
	(unmap-all-frame-indicators): likewise
	(show-frame-indicator): likewise
	(echo-in-window): use font-height
	(init-screen): give frame-window a 1 pixel border

2006-01-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (*window-formatters*): add %i formatter

	* core.lisp (fmt-window-status): new function
	(default-window-format): remove function
	(window-number): do not require the screen. all callers updated.
	(set-window-number): likewise
	(window-class): properly extract the resource class
	(window-res-name): new function

	* user.lisp (echo-windows): take a format arg. call format-expand
	to format the window list.

	* primitives.lisp (dformat): new function
	(format-expand): new function
	(*window-formatters*): new variable
	(*window-format*): likewise
